argocd/media-server/ombi/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ombi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ombi
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - env:
            - name: PGID
              value: "3000"
            - name: PUID
              value: "3000"
            - name: TZ
              value: America/Chicago
          image: harbor.yanello.net/docker/linuxserver/ombi:v4.53.4-ls245@sha256:dfd3a3380a042ea44b4936703836d8ae7ee46bcae551b3fa574c9c25632eb027
          imagePullPolicy: IfNotPresent
          name: ombi
          resources:
            limits:
              memory: 750Mi
            requests:
              cpu: 10m
              memory: 250Mi
          ports:
            - containerPort: 3579
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          startupProbe:
            httpGet:
              path: /
              port: 3579
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3579
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
