argocd/media-server/ombi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ombi
  name: ombi
spec:
  ports:
    - name: http
      port: 3579
      targetPort: 3579
  selector:
    app: ombi
