argocd/media-server/ombi/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Ombi
    gethomepage.dev/icon: ombi
    gethomepage.dev/description: "Ombi is your friendly media request tool, automatically\
      \ syncs with your media servers!"
    gethomepage.dev/pod-selector: app=ombi
  labels:
    app.kubernetes.io/instance: ombi-app
  name: ombi-vs-idx-0
  namespace: ombi
spec:
  parentRefs:
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - ombi.yanello.net
  rules:
    - backendRefs:
        - name: ombi
          namespace: ombi
          port: 3579
