argocd/media-server/ombi/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ombi
spec:
  endpointSelector:
    matchLabels:
      app: ombi
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3579"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: plex
            app: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
